--- a/Delegate/cDelegate/cDelegate.csproj
+++ b/Delegate/cDelegate/cDelegate.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{98579115-8C03-49C6-9CF3-FC0F671CDD00}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>chkDelegate</RootNamespace>
-    <AssemblyName>chkDelegate</AssemblyName>
+    <RootNamespace>ChkDelegate</RootNamespace>
+    <AssemblyName>ChkDelegate</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -36,9 +36,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Source\invoke.cs" />
-    <Compile Include="Source\types.cs" />
-    <Compile Include="Source\multi.cs" />
+    <Compile Include="Source\Invoke.cs" />
+    <Compile Include="Source\Types.cs" />
+    <Compile Include="Source\Multi.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
