--- a/Dlls/WorkDir/WorkDir.csproj
+++ b/Dlls/WorkDir/WorkDir.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\workFolder.cs" />
+    <Compile Include="Source\WorkFolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
