--- a/Files/cFolder/cFolder.csproj
+++ b/Files/cFolder/cFolder.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\cdir.cs" />
+    <Compile Include="Source\CDir.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Program.cs" />
   </ItemGroup>
