--- a/Files/cPath/cPath.csproj
+++ b/Files/cPath/cPath.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\findpath.cs" />
+    <Compile Include="Source\Findpath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Program.cs" />
   </ItemGroup>
