--- a/Times/cTime/cTime.csproj
+++ b/Times/cTime/cTime.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Source\chkTime.cs" />
+    <Compile Include="Source\ChkTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Program.cs" />
   </ItemGroup>
