--- a/Times/cTimer/cTimer.csproj
+++ b/Times/cTimer/cTimer.csproj
@@ -37,7 +37,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Source\timer.cs" />
+    <Compile Include="Source\Timer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
