--- a/CS60DN46/Ch26IntroduceWPF/WpfAppCodeFiles/WpfAppAllXaml.csproj
+++ b/CS60DN46/Ch26IntroduceWPF/WpfAppCodeFiles/WpfAppAllXaml.csproj
@@ -14,8 +14,8 @@
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="MyApp.xaml" />
-	<Complile Include = "MainWindow.xaml.cs" />
-	<Complile Include = "MyApp.xaml.cs" />
+	<Compile Include = "MainWindow.xaml.cs" />
+	<Compile Include = "MyApp.xaml.cs" />
     <Page Include="MainWindow.xaml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
