--- a/CS60DN46/Ch21ADO1Connected/DataProviderFactory/App.config
+++ b/CS60DN46/Ch21ADO1Connected/DataProviderFactory/App.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <appSettings>
+    <add key="provider" value="System.Data.SqlClient" />
+    <add key="connectionString" value="Data Source=(local);Initial Catalog=AutoLot;Integrated Security=True"/>
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
 </configuration>
