--- a/CS60DN46/Ch21ADO1Connected/DataProviderFactory/App.config
+++ b/CS60DN46/Ch21ADO1Connected/DataProviderFactory/App.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="provider" value="System.Data.SqlClient" />
-    <add key="connectionString" value="Data Source=(local);Initial Catalog=AutoLot;Integrated Security=True"/>
+    <!-- which provider -->
+    <!-- <add key="provider" value="System.Data.SqlClient" /> -->
+    <add key="provider" value="System.Data.OleDb" />
+    <!-- which connection string -->
+    <!-- <add key="connectionString" value="Data Source=(local);Initial Catalog=AutoLot;Integrated Security=True"/> -->
+    <add key="cnStr" value="Provider=SQLOLEDB;Data Source=(local);Initial Catalog=AutoLot;Integrated Security=SSPI"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
