--- a/CS60DN46/Ch21ADO1Connected/AutoLotDAL/AutoLotDAL.csproj
+++ b/CS60DN46/Ch21ADO1Connected/AutoLotDAL/AutoLotDAL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectedLayer\InventoryDAL.cs" />
+    <Compile Include="Models\NewCar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
