--- a/CS60DN46/Ch22Disconnected/MultitabledDataSetApp/App.config
+++ b/CS60DN46/Ch22Disconnected/MultitabledDataSetApp/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <connectionStrings>
+    <add name="AutoLotSqlProvider" connectionString="Data Source=(local);Integrated Security=SSPI;Initial Catalog=AutoLot"/>
+  </connectionStrings>
 </configuration>
