--- a/CS60DN46/Ch21ADO1Connected/AutoLotDAL/AutoLotDAL.csproj
+++ b/CS60DN46/Ch21ADO1Connected/AutoLotDAL/AutoLotDAL.csproj
@@ -33,12 +33,42 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectedLayer\InventoryDAL.cs" />
+    <Compile Include="DataSet\AutoLotDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AutoLotDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DisconnectedLayer\InventoryDALDC.cs" />
     <Compile Include="Models\NewCar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="DataSet\AutoLotDataSet.xsc">
+      <DependentUpon>AutoLotDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet\AutoLotDataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>AutoLotDataSet.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DataSet\AutoLotDataSet.xss">
+      <DependentUpon>AutoLotDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
