--- a/CS60DN46/Ch23EF/AutoLotDAL/AutoLotDAL.csproj
+++ b/CS60DN46/Ch23EF/AutoLotDAL/AutoLotDAL.csproj
@@ -60,10 +60,10 @@
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Partials\InventoryPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repos\BaseRepo.cs" />
+    <Compile Include="Repos\IRepo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repos\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
