--- a/CS60DN46/Ch23EF/AutoLotDAL/AutoLotDAL.csproj
+++ b/CS60DN46/Ch23EF/AutoLotDAL/AutoLotDAL.csproj
@@ -55,6 +55,11 @@
   <ItemGroup>
     <Compile Include="EF\AutoLotEntities.cs" />
     <Compile Include="EF\DataInitializer.cs" />
+    <Compile Include="Migrations\202011280542517_InitialCreate.cs" />
+    <Compile Include="Migrations\202011280542517_InitialCreate.designer.cs">
+      <DependentUpon>202011280542517_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CreditRisk.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Inventory.cs" />
@@ -68,7 +73,11 @@
     <Compile Include="Repos\IRepo.cs" />
     <Compile Include="Repos\OrderRepo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202011280542517_InitialCreate.resx">
+      <DependentUpon>202011280542517_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
