--- a/CS60DN46/Ch23EF/AutoLotDAL/App.config
+++ b/CS60DN46/Ch23EF/AutoLotDAL/App.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <section name="entityFramework"
     type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
@@ -19,7 +18,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="AutoLotConnection"
-      connectionString="data source=(LocalDb)\MSSQLLocalDb;initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      connectionString="data source=(Local);initial catalog=AutoLot3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
