--- a/CS60DN46/Ch23EF/AutoLotDAL/App.config
+++ b/CS60DN46/Ch23EF/AutoLotDAL/App.config
@@ -18,7 +18,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="AutoLotConnection"
-      connectionString="data source=(Local);initial catalog=AutoLot3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      connectionString="data source=(LocalDb)\MSSQLLocalDb;initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
