--- a/CS60DN46/Ch23EF/AutoLotTestDrive/App.config
+++ b/CS60DN46/Ch23EF/AutoLotTestDrive/App.config
@@ -15,6 +15,6 @@
         </providers>
     </entityFramework>
   <connectionStrings>
-    <add name="AutoLotConnection" connectionString="data source=(Local);initial catalog=AutoLot3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AutoLotConnection" connectionString="data source=(LocalDb)\MSSQLLocalDb;initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
