--- a/Variables/cVariable/cVariable.csproj
+++ b/Variables/cVariable/cVariable.csproj
@@ -38,7 +38,7 @@
     <Compile Include="Source\Program.cs" />
     <Compile Include="Source\Marks.cs" />
     <Compile Include="Source\Valuable.cs" />
-    <Compile Include="Source\Entry.cs" />
+    <Compile Include="Source\Basis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
