--- a/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
+++ b/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <system.serviceModel>
+    <services>
+      <service name = "MagicSEightBallServiceLib.MagicEightBallService">
+        <endpoint address = "http://localhost:8080/MagicEightBallService" binding = "basicHttpBinding" contract ="MagicEightBallServiceLib.IEightBall" />
+      </service>
+    </services>
+  </system.serviceModel>
 </configuration>
