--- a/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
+++ b/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
@@ -6,7 +6,12 @@
   <system.serviceModel>
     <services>
       <service name = "MagicEightBallServiceLib.MagicEightBallService">
-        <endpoint address = "http://localhost:8080/MagicEightBallService" binding = "basicHttpBinding" contract ="MagicEightBallServiceLib.IEightBall" />
+        <endpoint address = "" binding = "basicHttpBinding" contract ="MagicEightBallServiceLib.IEightBall" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8080/MagicEightBallService"/>
+          </baseAddresses>
+        </host>
       </service>
     </services>
   </system.serviceModel>
