--- a/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
+++ b/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
@@ -5,8 +5,9 @@
     </startup>
   <system.serviceModel>
     <services>
-      <service name = "MagicEightBallServiceLib.MagicEightBallService">
+      <service name = "MagicEightBallServiceLib.MagicEightBallService" behaviorConfiguration="EightBallServiceMEXBehavior">
         <endpoint address = "" binding = "basicHttpBinding" contract ="MagicEightBallServiceLib.IEightBall" />
+        <endpoint address ="mex" binding = "mexHttpBinding" contract ="IMetadataExchange" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080/MagicEightBallService"/>
@@ -14,5 +15,13 @@
         </host>
       </service>
     </services>
+
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="EightBallServiceMEXBehavior">
+          <serviceMetadata httpGetEnabled="true"/>
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
   </system.serviceModel>
 </configuration>
