--- a/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
+++ b/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
@@ -13,6 +13,7 @@
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080/MagicEightBallService"/>
+            <add baseAddress="net.tcp://localhost:8099/MagicEightBallService"/>
           </baseAddresses>
         </host>
       </service>
