--- a/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
+++ b/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
@@ -19,6 +19,12 @@
       </service>
     </services>
 
+    <bindings>
+      <basicHttpBinding>
+        <binding openTimeout="00:00:30" />
+      </basicHttpBinding>
+    </bindings>
+
     <behaviors>
       <serviceBehaviors>
         <behavior name="EightBallServiceMEXBehavior">
