--- a/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
+++ b/CS60DN46/Ch25WCF/MagicEightBallServiceHost/App.config
@@ -23,6 +23,9 @@
       <basicHttpBinding>
         <binding openTimeout="00:00:30" />
       </basicHttpBinding>
+    <netTcpBinding>
+      <binding closeTimeout="00:00:15" />
+    </netTcpBinding>
     </bindings>
 
     <behaviors>
