--- a/CS60DN46/Ch25WCF/MathServiceLib/App.config
+++ b/CS60DN46/Ch25WCF/MathServiceLib/App.config
@@ -11,7 +11,7 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="MathServiceLib.BasicMath">
+      <service name="MathServiceLib.MethSerive">
         <endpoint address="" binding="basicHttpBinding" contract="MathServiceLib.IBasicMath">
           <identity>
             <dns value="localhost" />
