--- a/CS60DN46/Ch25WCF/MathServiceLib/MathServiceLib.csproj
+++ b/CS60DN46/Ch25WCF/MathServiceLib/MathServiceLib.csproj
@@ -46,7 +46,7 @@
   <ItemGroup>
     <Compile Include="IBasicMath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BasicMath.cs" />
+    <Compile Include="MethSerive.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
