--- a/CS60DN46/Ch25WCF/MathWindowsServiceHost/App.config
+++ b/CS60DN46/Ch25WCF/MathWindowsServiceHost/App.config
@@ -3,4 +3,17 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <system.serviceModel>
+    <services>
+      <service name="MathServiceLib.MathService"></service>
+    </services>
+
+    <behaviors>
+      <serviceBehaviors>
+        <behavior>
+          <serviceMetadata httpGetBinding="true"/>
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+  </system.serviceModel>
 </configuration>
