--- a/CS60DN46/Ch31WebForms/BlankApp/BlankApp.csproj
+++ b/CS60DN46/Ch31WebForms/BlankApp/BlankApp.csproj
@@ -50,7 +50,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="HTMLPage1.html" />
+    <Content Include="TopPage.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
