--- a/CS60DN46/Ch31WebForms/SinglePageModel/Web.config
+++ b/CS60DN46/Ch31WebForms/SinglePageModel/Web.config
@@ -26,9 +26,17 @@
     </compilers>
   </system.codedom>
   <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory,EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
-
+  <connectionStrings>
+    <add name="AutoLotConnection" connectionString="data source=(LocalDb)\MSSQLLocalDb;initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
