--- a/CS60DN46/Ch32WebControls/ValidatorCtrls/Web.config
+++ b/CS60DN46/Ch32WebControls/ValidatorCtrls/Web.config
@@ -22,4 +22,8 @@
         </compilers>
     </system.codedom>
 
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="WebForms" />
+  </appSettings>
+
 </configuration>
