--- a/CS60DN46/Ch32WebControls/FunWithThemes/Web.config
+++ b/CS60DN46/Ch32WebControls/FunWithThemes/Web.config
@@ -10,6 +10,7 @@
     <system.web>
       <compilation debug="true" targetFramework="4.7.2"/>
       <httpRuntime targetFramework="4.7.2"/>
+      <pages controlRenderingCompatibilityVersion="4.5" theme="BasicGreen"></pages>
     </system.web>
     <system.codedom>
         <compilers>
