--- a/CS60DN46/Ch33State/FunWithProfiles/Web.config
+++ b/CS60DN46/Ch33State/FunWithProfiles/Web.config
@@ -10,6 +10,14 @@
     <system.web>
       <compilation debug="true" targetFramework="4.7.2"/>
       <httpRuntime targetFramework="4.7.2"/>
+      <profile>
+        <properties>
+          <add name="StreetAddress" type="System.String" />
+          <add name="City" type="System.String "/>
+          <add name="State" type="System.String" />
+          <add name="TotalPost" type="System.Int32" />
+        </properties>
+      </profile>
     </system.web>
     <system.codedom>
         <compilers>
