--- a/CS60DN46/Ch33State/FunWithProfiles/Web.config
+++ b/CS60DN46/Ch33State/FunWithProfiles/Web.config
@@ -17,6 +17,10 @@
           <add name="State" type="System.String" />
           <add name="TotalPost" type="System.Int32" />
         </properties>
+        <providers>
+          <clear/>
+          <add name="AspNetSqlProfileProvider" connectionStringName="LocalSqlServer" applicationName="/" type="System.Web.Profile.SqlProfileProvider, System.Web, Version=4.0.0.0,Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        </providers>
       </profile>
     </system.web>
     <system.codedom>
@@ -29,5 +33,9 @@
                 warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
         </compilers>
     </system.codedom>
+  
+    <connectionStrings>
+      <add name="LocalSqlServer" connectionString="Data Source=(local);Integrated Security=SSPI;Initial Catalog=aspnetdb;" providerName="System.Data.SqlClient"/>
+    </connectionStrings>
 
 </configuration>
