--- a/CS60DN46/Ch33State/FunWithProfiles/Web.config
+++ b/CS60DN46/Ch33State/FunWithProfiles/Web.config
@@ -4,7 +4,7 @@
       <compilation debug="true" targetFramework="4.7.2"/>
       <httpRuntime targetFramework="4.7.2"/>
       <anonymousIdentification enabled="true"/>
-      <profile>
+      <profile enabled="true">
         <properties>
           <add name="StreetAddress" type="System.String" allowAnonymous="true" />
           <add name="City" type="System.String" allowAnonymous="true"/>
