--- a/CS60DN46/Ch34MVC/CarLotMVC2/Views/Web.config
+++ b/CS60DN46/Ch34MVC/CarLotMVC2/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="CarLotMVC2" />
+        <add namespace="CarLotMVC" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
