--- a/CS60DN46/Ch34MVC/MVC/CarLotMVC/Web.config
+++ b/CS60DN46/Ch34MVC/MVC/CarLotMVC/Web.config
@@ -11,6 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CarLotMVC-20210329110214.mdf;Initial Catalog=aspnet-CarLotMVC-20210329110214;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="AutoLotConnection"
+      connectionString="data source=(LocalDb)\MSSQLLocalDb;initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
